Added JSR-303 validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,9 @@
 NotNull.auction.name=Auction must have a name.
 NotNull.bid.amount=Bid must have an amount.
 
+# How to parameterize this with JSR-303 annotation?
+BidIncrement=Your bid of must be of 0.25 increments.
+
 # This is how you would override the default hibernate @NotNull message. The only reason
 # this is even considered is because of our LocalValidatorFactoryBean defined in ValidationConfig which links
 # to the Spring MessageSource.
