--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,23 +1,19 @@
-NotNull.auction.name=Auction must have a name.
+##
+## [Hibernate Custom Constraints]
+##
+## http://docs.jboss.org/hibernate/stable/validator/reference/en-US/html_single/#validator-customconstraints
+## http://docs.jboss.org/hibernate/stable/validator/reference/en-US/html_single/#chapter-message-interpolation
+##
+## ${foo} is an EL expression (i.e., ${validatedValue}) see http://docs.jboss.org/hibernate/stable/validator/reference/en-US/html_single/#section-interpolation-with-message-expressions
+## {foo} is a message parameter that correlates to attributes on your annotation by name.
+
+BidIncrement.message=Your bid of ${validatedValue} must be of {value} increments.
+
+# Spring Mvc will resolve a list of error codes that you could also use to help narrow down
+# the right message. Unfortunately this feature is not baked into the REST API processing and
+# only available for true Spring MVC. I've added a bridge to this work
+
+# In this case when the annotation was process the first argument is the name of the field.
+NotNull.auction.name=Auction must have a {0}.
 NotNull.bid.amount=Bid must have an amount.
 
-# How to parameterize this with JSR-303 annotation?
-BidIncrement=Your bid of must be of 0.25 increments.
-
-# This is how you would override the default hibernate @NotNull message. The only reason
-# this is even considered is because of our LocalValidatorFactoryBean defined in ValidationConfig which links
-# to the Spring MessageSource.
-#
-# javax.validation.constraints.NotNull.message=This is a required field.
-#
-# Spring MVC provides a wonderful means to qualify down your message with codes but unfortunately
-# this behavior does not work without Spring MVC.
-#
-# "codes": [
-#   "NotNull.auction.name",
-#   "NotNull.name",
-#   "NotNull.java.lang.String",
-#   "NotNull"
-# ],
-#
-# Our custom ApiErrorInterpolator provides this qualifying behavior through our ApiError pattern.
