Added init rule engine

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@
 ## {foo} is a message parameter that correlates to attributes on your annotation by name.
 
 BidIncrement.message=Your bid of ${validatedValue} must be of {value} increments.
+BidTooLow=You must bid more than {0}.
 
 # Spring Mvc will resolve a list of error codes that you could also use to help narrow down
 # the right message. Unfortunately this feature is not baked into the REST API processing and
