highest bid rule

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,8 +8,10 @@
 ## {foo} is a message parameter that correlates to attributes on your annotation by name.
 
 BidIncrement.message=Your bid of ${validatedValue} must be of {value} increments.
-BidTooLow=You must bid more than {0}.
 
+##
+## Spring Validation
+##
 # Spring Mvc will resolve a list of error codes that you could also use to help narrow down
 # the right message. Unfortunately this feature is not baked into the REST API processing and
 # only available for true Spring MVC. I've added a bridge to this work
@@ -17,4 +19,5 @@ BidTooLow=You must bid more than {0}.
 # In this case when the annotation was process the first argument is the name of the field.
 NotNull.auction.name=Auction must have a {0}.
 NotNull.bid.amount=Bid must have an amount.
+BidTooLow=You must bid more than {0}.
 
