Added interpolation of ObjectErrors

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,4 +20,4 @@ BidIncrement.message=Your bid of ${validatedValue} must be of {value} increments
 NotNull.auction.name=Auction must have a {0}.
 NotNull.bid.amount=Bid must have an amount.
 BidTooLow=You must bid more than {0}.
-
+BidAlreadyExists=You already have a bid.
